--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -23,17 +23,17 @@
             </ul>
         </nav>
     </header>
-    <main class="loginForm">
-        <h2 class="loginTitle">Log In</h2>
+    <main class="login_form">
+        <h2 class="login_title">Log In</h2>
         <section id="contact">
-            <form action="#" method="post">
+            <form class="login_formToSend" action="#" method="post">
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email">
                 <label for="password">Mot de passe</label>
                 <input type="password" name="password" id="password">
                 <input type="submit" value="Se connecter">
             </form>
-            <p class="forgetPasswordLink"><a href="#">Mot de passe oublié</a></p>
+            <p class="forget_passwordLink"><a href="#">Mot de passe oublié</a></p>
         </section>
     </main>
     <footer>
