--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,14 +13,20 @@
 	<script src="script.js" defer></script>
 </head>
 <body>
-	<aside id="modal1">
-		<div class="modal-wrapper" id="modal-wrapper-GalleryEdit">
-			<div class="icon-container-modalClose"></div>
-			<h3>Galerie photo</h3>
-			<div class="modalContent"></div>
-			<button id="addPictureButton">Ajouter une photo</button>
+	<aside id="modal" style = "display:none;">
+		<div class="modal-wrapper modal1" id="modal-wrapper-GalleryEdit">
+			<div class="icon-container-modalClose">
+				<i id="exitIcon" class="fa-solid fa-xmark"></i>
+			</div>
+			<h3 class="modal-title">Galerie photo</h3>
+			<div class="modalContent">
+
+			</div>
+			<div class="button-container">
+				<button id="addPictureButton">Ajouter une photo</button>
+			</div>
 		</div>
-		<div class="modal-wrapper" id="modal-wrapper-PictureAdd">
+		<div class="modal-wrapper modal2" id="modal-wrapper-PictureAdd">
 			<div class="icon-container-modalClose modalGetBack"></div>
 			<h3>Ajout photo</h3>
 				<form id="addPictureForm" action="#" method="post" name="addPictureForm">
@@ -45,7 +51,7 @@
 		<ul>
 			<li><a href="#portfolio">projets</a></li>
 			<li><a href="#contact">contact</a></li>
-			<li><a href="login.html">login</a></li>
+			<li><a id="logout" href="login.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -63,7 +69,7 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<h2>Mes projets</h2>
 		<div class="gallery">
 			
 		</div>
