Ajout du logo poubelle sur chaque projet de la modale via JS, styles appliqués via CSS et ajout d'éléments aria en html sur la modale pour l'accessibilité

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,7 +13,7 @@
 	<script src="script.js" defer></script>
 </head>
 <body>
-	<aside id="modal" style = "display:none;">
+	<aside id="modal" aria-hidden="true" style="display:none;" role="dialog" aria-labelledby="modal-title">
 		<div class="modal-wrapper modal1" id="modal-wrapper-GalleryEdit">
 			<div class="icon-container-modalClose">
 				<i id="exitIcon" class="fa-solid fa-xmark"></i>
