--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -28,9 +28,9 @@
         <section id="contact">
             <form class="login_formToSend" action="#" method="post">
                 <label for="email">E-mail</label>
-                <input type="email" name="email" id="email">
+                <input type="email" name="email" id="email" autocomplete="email">
                 <label for="password">Mot de passe</label>
-                <input type="password" name="password" id="password">
+                <input type="password" name="password" id="password" autocomplete="current-password">
                 <input type="submit" value="Se connecter">
             </form>
             <p class="forget_passwordLink"><a href="#">Mot de passe oublié</a></p>
